Update App.css & Header.css to fix issue with body width being larger than view width, causing unwanted horizontal scrolling

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -65,7 +65,6 @@ body {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  min-width: 100vw;
   min-height: 100vh;
   background-color: rgba(26, 26, 46, 1);
   background-image: var(--root-background);
